--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,61 +1,39 @@
-name: desafio
-run-name: ${{ github.actor }} Pipeline Deploy 
+name: automacao_efs
+run-name: EFS
 on: 
   push:
     branches:
       - "main"
-    paths-ignore:
-      - "docs/"
-      - "images/"
-      - "*.md"
-      - "*.dockerignore"
+    paths:
+      - images/**
+      - .github/workflows/main.yml
 jobs:
-  githubactions-desafioS:
+  efs-senai:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
+      - name: Instalação do SSH
+        run: sudo apt-get install -y openssh-client
 
-      - name: INSTALL PACKAGES
-        run: |
-          sudo apt update -y
-          sudo apt-get install figlet -y
-          curl https://static.snyk.io/cli/latest/snyk-linux -o snyk
-          chmod +x ./snyk
-          mv ./snyk /usr/local/bin/
-
-          sudo apt-get update && sudo apt-get install -y gnupg software-properties-common
-          wget -O- https://apt.releases.hashicorp.com/gpg | \
-            gpg --dearmor | \
-            sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg > /dev/null
-
-
-          echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] \
-            https://apt.releases.hashicorp.com $(lsb_release -cs) main" | \
-            sudo tee /etc/apt/sources.list.d/hashicorp.list
-          
-          sudo apt update -y
-          sudo apt-get install terraform
-
-            
-      - name: Snyk Auth
-        run: |
-          snyk -d auth $SNYK_TOKEN
+      - name: Verificação da chave PEM
+        run: echo "$KEY_PATH"
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_AUTH_TOKEN }}
+          KEY_PATH: ${{ secrets.CHAVE_PEM }}
 
-      - name: AWS CLI - 2
-        if: always()
-        uses : aws-actions/configure-aws-credentials@v4
-        with: 
-          aws-region: us-east-1
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+      - name: Adicionar host EC2 ao known_hosts
+        run: |
+          ssh-keygen -t rsa -b 4096 -f ~/.ssh/id_rsa -N ''
+          ssh-keyscan -H 18.215.175.231 >> ~/.ssh/known_hosts
 
-      - name: Terraform apply (CD)
+      - name: Envio das imagens SCP
         if: always()
         run: |
-          COMMIT_SHA=$(echo $GITHUBSHA | cut -c 1-5 )
-          terraform init
-          terraform apply -var="github_sha=$COMMIT_SHA" --auto-approve
+          echo "$KEY_PATH" > ./chave.pem
+          chmod 600 ./chave.pem
+          scp -i ./chave.pem images/*.* ec2-user@18.215.175.231:/home/ec2-user/efs
+        env:
+          KEY_PATH: ${{ secrets.CHAVE_PEM }}
+          
+          
